--- a/stil.css
+++ b/stil.css
@@ -1,30 +1,39 @@
 
-
+.colorfulband{
+    background-color: #30323D;
+}
 .band1{
     height: 10px;
-    width: 384px;
+    width: 320px;
     background-color: #30323D;
 }
 .band2{
     height: 10px;
-    width: 384px;
+    width: 320px;
     background-color:  #30323D;
 }
 .band3{
     height: 10px;
-    width: 384px;
+    width: 320px;
     background-color:  #30323D;
 }
 .band4{
     height: 10px;
-    width: 384px;
+    width: 320px;
     background-color:  #30323D;
 }
 .band5{
     height: 10px;
-    width: 384px;
+    width: 320px;
     background-color:#30323D ;
 }
+.band6{
+    height: 10px;
+    width: 320px;
+    background-color:#30323D ;
+}
+
+
 
 .nav-head {
     height: 300px;
